--- a/.github/workflows/magasinMagique.yml
+++ b/.github/workflows/magasinMagique.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run build with Gradle Wrapper
-        run: ./gradlew build
-      - name: Tesqt project
-        run: ./gradlew test
+        run: sudo ./gradlew build
+      - name: Test project
+        run: sudo ./gradlew test
