--- a/.github/workflows/magasinMagique.yml
+++ b/.github/workflows/magasinMagique.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
       - name: Test project
+        uses: gradle/gradle-test-action@v2
         outputs:
           output1: ${{ steps.step1.outputs.test }}
           steps:
