trying to get test output

--- a/.github/workflows/magasinMagique.yml
+++ b/.github/workflows/magasinMagique.yml
@@ -17,6 +17,12 @@ jobs:
         uses: gradle/gradle-test-action@v2
         outputs:
           output1: ${{ steps.step1.outputs.test }}
+          uses: gradle/gradle-test-action@v2
           steps:
             id: step1
             run: echo "./gradlew test" >> "$GITHUB_OUTPUT"
+      - name: outputs
+        runs-on: ubunutu:latest
+        needs: step1
+        steps:
+          run: echo "${{ steps.step1.outputs.test }}"
