--- a/.github/workflows/magasinMagique.yml
+++ b/.github/workflows/magasinMagique.yml
@@ -13,7 +13,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
-      - name: Test project
-        uses: gradle/gradle-test-action@v2
+#      - name: Test project
+#        uses: gradle/gradle-test-action@v2
       - name: Test project
         run: ./gradlew test --info
