trying gradle instead of gradlew

--- a/.github/workflows/magasinMagique.yml
+++ b/.github/workflows/magasinMagique.yml
@@ -16,4 +16,4 @@ jobs:
 #      - name: Test project
 #        uses: gradle/gradle-test-action@v2
       - name: Test project
-        run: ./gradlew test --info
+        run: ./gradle test --info
